Rework technical documentation
- Add usage
- Move examples from reference to usage
- Fix typos

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -5,11 +5,11 @@ span.pre {
 }
 
 pre, .viewcode-block {
-    background-color: #f4fff5 !important;
+    background-color: #fbffff !important;
 }
 
 pre {
-    border: 1px solid #d7e8bf;
+    border: 1px solid #bfe8e6;
 }
 
 body {
